some style for geoloc

--- a/npds_galerie/css/galerie.css
+++ b/npds_galerie/css/galerie.css
@@ -49,17 +49,6 @@ a[href*="intent"] {
    width: 100%;
 }
 
-
-#mapol :-webkit-full-screen {
-   height: 100%;
-   margin: 0;
-}
-#mapol :-ms-fullscreen {
-   height: 100%;
-}
-#mapol :fullscreen {
-   height: 100%;
-}
 #map-wrapper :-webkit-full-screen {
    height: 100%;
    margin: 0;
@@ -92,80 +81,79 @@ a[href*="intent"] {
    height: 100%;
 }
 
-
-      .map {
-        width: 100%;
-        height:540px;
-      }
-      .ol-fullscreen:-webkit-full-screen {
-        height: 100%;
-        margin: 0;
-      }
-      .ol-fullscreen:-ms-fullscreen {
-        height: 100%;
-      }
-      .ol-fullscreen:fullscreen {
-        height: 100%;
-      }
-      .ol-fullscreen {
-        margin-bottom: 10px;
-        width: 100%;
-        height: 540px;
-      }
-
-      .map {
-        height: 100%;
-      }
-
-      .sidebar {
-/*
-        background: #1F6B75;
-        height: 100%;
-        position:absolute;
-        top:200px;
-        right:25px;
-*/
-      }
-      
-      
-   #sidebar {
-      filter : alpha(opacity=90);
-      -moz-opacity : 0.9;
-      opacity : 0.9;
-      /* 
-      background: white;
-      */
-      position: absolute;
-      top: 46px;
-      right: 8px;
-      min-width: 250px;
-      height: 85%;
-      overflow: auto;
+.map {
+   width: 100%;
+   height:540px;
 }
-      
-       #sidebar: fullscreen {
-        position : absolute;
-        top: 46px;
-      }
-       #sidebar:-webkit-full-screen {
-        position : absolute;
-        top: 46px;
-      }
-        #sidebar:-ms-fullscreen {
-        position : absolute;
-        top: 46px;
-      }
-   .ol-popup {
-      position: absolute;
-      background-color: white;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-      border: 1px solid #fff;
-      bottom: 12px;
-      left: -50px;
-      min-width: 300px;
-   }
+.ol-fullscreen:-webkit-full-screen {
+   height: 100%;
+   margin: 0;
+}
+.ol-fullscreen:-ms-fullscreen {
+   height: 100%;
+}
+.ol-fullscreen:fullscreen {
+   height: 100%;
+}
+.ol-fullscreen {
+   margin-bottom: 10px;
+   width: 100%;
+   height: 540px;
+}
+
+.map {
+   height: 100%;
+}
+.sidebar {}
+
+#sidebar {
+   filter : alpha(opacity=90);
+   -moz-opacity : 0.9;
+   opacity : 0.9;
+   position: absolute;
+   top: 46px;
+   right: 8px;
+   min-width: 250px;
+   height: 85%;
+   overflow: auto;
+}
+
+#sidebar_loca {
+   filter : alpha(opacity=90);
+   -moz-opacity : 0.9;
+   opacity : 0.9;
+   position: absolute;
+   top: 46px;
+   right: 8px;
+   min-width: 250px;
+}
+#sidebar_loca .custom-select {
+font-size: 0.8rem; 
+}
+
+#sidebar: fullscreen {
+   position : absolute;
+   top: 46px;
+}
+#sidebar:-webkit-full-screen {
+   position : absolute;
+   top: 46px;
+}
+#sidebar:-ms-fullscreen {
+   position : absolute;
+   top: 46px;
+}
+.ol-popup {
+   position: absolute;
+   background-color: white;
+   padding: 15px;
+   border-radius: 10px;
+   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
+   border: 1px solid #fff;
+   bottom: 12px;
+   left: -50px;
+   min-width: 300px;
+}
 .ol-popup:after, .ol-popup:before {
    top: 100%;
    border: solid transparent;
@@ -196,11 +184,11 @@ a[href*="intent"] {
 .ol-popup-closer:after {
    content: "✖";
 }
-#mapol .ol-zoomslider {
+#mapol .ol-zoomslider, #mapimg .ol-zoomslider {
     background-color: transparent;
     top: 2.3em;
 }
-#mapol .ol-zoom .ol-zoom-out {
+#mapol .ol-zoom .ol-zoom-out, #mapimg .ol-zoom .ol-zoom-out {
    margin-top: 204px;
 }
 
@@ -211,6 +199,10 @@ a[href*="intent"] {
 .ol-full-screen {
    right: 3em;
 }
+#mapol .ol-full-screen {
+   right: .5em;
+}
+
 .ol-rotate {
    right: 8em;
    top: .5em;
@@ -223,6 +215,9 @@ a[href*="intent"] {
   top: .5em;
   right: 5.5em;
 }
+.ol-overviewmap {
+  bottom: 3.8em;
+}
 
 .custom-mouse-position {
    font-family: "Courier New", Lucida, console, Monaco, monospace;
@@ -231,7 +226,6 @@ a[href*="intent"] {
    bottom: 35px;
    position: absolute;
    left: 8px;
-/*   text-shadow: 2px 2px #000000;*/
    text-shadow: black 0.1em 0.1em 0.2em;
    font-weight: 700;
 }
