--- a/npds_galerie/css/galerie.css
+++ b/npds_galerie/css/galerie.css
@@ -197,6 +197,7 @@ font-size: 0.8rem;
 .ol-control button, .ol-scale-line {
    background-color: var(--bs-primary);
    opacity: 0.8;
+   color: white;
 }
 .ol-full-screen {
    right: 3em;
